Testing and JavaDoc